crates/wdl-grammar/tests/parsing/mismatched-bracket/source.errors
error: expected `]`, but found identifier
  ┌─ tests/parsing/mismatched-bracket/source.wdl:7:32
  │
7 │     Map[Boolean, Array[String] y
  │        -              -      - ^ unexpected identifier
  │        │              │      │  
  │        │              │      ...matches this closing brace
  │        │              this opening brace...
  │        this `[` is not matched

