crates/wdl-grammar/tests/parsing/mismatched-bracket/source.wdl
# This is a test of an unmatched bracket.

version 1.1

struct test {
    Map[String, String] x
    Map[Boolean, Array[String] y
    String z
}